# logsys

./: CMakeLists.txt  README.md  logging.cc  logging.h  main.cc
